changin how isHidden works to fix bug with extra space below footer from about section overflow

--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -154,8 +154,14 @@ audio {
  Utility Classes
 ------------------------------------------------------------------------ */
 .isHidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
     position: absolute;
-    left: -9999px;
+    width: 1px;
 }
 
 .isBold {
